Added Sage Days workshop

--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -542,23 +542,24 @@
                 </div>
             </div>
     </div>
+-->
     <div class="container">
             <div class="row">
                 <div class="col-sm">
-                    <h5 style="text-align: center;"><a href="https://amrita.edu/events/combinatorial-methods-in-graph-theory/">Combinatorial Methods in Graph Theory 2</a></h5>
-                    <p style="text-align: center;">Amrita University 2, Coimbatore, July 15-17</p>
+                    <h5 style="text-align: center;"><a href="https://amrita.edu/events/combinatorial-methods-in-graph-theory/" target="_blank">Combinatorial Methods in Graph Theory</a></h5>
+                    <p style="text-align: center;">Amrita University, Coimbatore, July 15-17</p>
                 </div>
 
                 <div class="col-sm">
-                    <h5 style="text-align: center;"><a href="https://amrita.edu/events/combinatorial-methods-in-graph-theory/">Combinatorial Methods in Graph Theory 4</a></h5>
-                    <p style="text-align: center;">Amrita  University 4, Coimbatore, July 15-17</p>
+                    <h5 style="text-align: center;"><a href="https://wiki.sagemath.org/days114" target="_blank">Sage Days 114</a></h5>
+                    <p style="text-align: center;">The Institute of Mathematical Sciences, Chennai, July 25–27</p>
                 </div>
 
             </div>
 
     </div>
--->
-    <div class="container">
+
+<!--    <div class="container">
             <div class="row">
                 <div class="col-sm">
                     <h5 style="text-align: center;"><a href="https://amrita.edu/events/combinatorial-methods-in-graph-theory/">Combinatorial Methods in Graph Theory</a></h5>
@@ -566,6 +567,7 @@
                 </div>
             </div>
     </div>
+-->
     </section>
 
     <!-- Submission-->
