--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -49,6 +49,7 @@
                            <a class="dropdown-item js-scroll-trigger" href="#localinfobanq">Visa Information</a>
                            <a class="dropdown-item js-scroll-trigger" href="#localinfotour">Social Events</a>
                            <a class="dropdown-item js-scroll-trigger" href="#localinfoacco">Other Conferences</a>
+                           <a class="dropdown-item js-scroll-trigger" href="#localinfotourism">Tourism</a>
                         </div>
                     </li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#submission">Submission</a></li>
@@ -568,6 +569,18 @@
             </div>
     </div>
 -->
+    <!-- Tourism-->
+
+    <div id="localinfotourism" class="container">
+        <div class="row justify-content-center">
+            <div class="col-lg-8 text-center">
+                <h4 style="text-align: center;">Tourism</h4>
+                <hr class="divider my-4"/>
+                <p class="text-white-50 mb-4">Coming soon</p>		    
+            </div>
+        </div>
+    </div>
+	     
     </section>
 
     <!-- Submission-->
