Made sponsor links clickable

--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -576,7 +576,7 @@
             <div class="col-lg-8 text-center">
                 <h4 style="text-align: center;">Tourism</h4>
                 <hr class="divider my-4"/>
-                <p class="text-white-50 mb-4">Coming soon</p>		    
+                <p style="text-align: center;">Coming soon</p>		    
             </div>
         </div>
     </div>
@@ -835,37 +835,26 @@
                 </div>
             </div>
         </div>
-    <div id="portfolio">
-            <div class="container-fluid p-0">
-                <div class="row no-gutters">
-            <div class="col-lg-4 col-sm-6">
-                        <!--<a class="portfolio-box" href="assets/img/7.jpg">-->
-                        <a class="inactiveLink" href="assets/img/7.jpg">
-                            <img class="img-fluid" src="assets/img/7.jpg" alt="" />
-                            <div class="portfolio-box-caption">
-                               <!-- <div class="project-category text-white-50"></div>
-                                <div class="project-name"></div>-->
-                            </div>
-                        </a>
-                    </div>
-                   <div class="col-lg-4 col-sm-6">
-                        <!--<a class="portfolio-box" href="assets/img/9.jpg">-->
-                        <a class="inactiveLink" href="assets/img/9.jpg">
-                        <img class="img-fluid" src="assets/img/9.jpg" alt="" />
-                            <div class="portfolio-box-caption">
-                                <!--<div class="project-category text-white-50"></div>
-                                <div class="project-name"></div>-->
-                            </div>
-                        </a>
-                    </div>
-                   <div class="col-lg-4 col-sm-6">
-                        <a class="inactiveLink" href="assets/img/NSFlogo.png">
-                        <img class="img-fluid" src="assets/img/NSFlogo.png" alt="NSF logo">
-                        </a>
-                    </div>		
-                </div>
-            </div>
-        </div>
+	    
+	<div class="container-fluid p-0">
+   		<div class="row no-gutters">
+        		<div class="col-lg-4 col-sm-6">
+	            		<a href="https://www.iisc.ac.in/">
+		            	<img class="img-fluid" src="assets/img/7.jpg" alt="IISc logo">
+                  		</a> 
+                	</div>
+               		<div class="col-lg-4 col-sm-6">
+	            		<a href="https://www.iisc.ac.in/">
+                  		<img class="img-fluid" src="assets/img/9.jpg" alt="IISc logo">
+                  		</a>
+               		</div>
+               		<div class="col-lg-4 col-sm-6">
+            			<a href="https://www.nsf.gov/">
+                  		<img class="img-fluid" src="assets/img/NSFlogo1.png" alt="NSF logo">
+                  		</a>
+               		</div>                    
+         	</div>
+         </div>
     </section>
    
 
