--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -296,7 +296,7 @@
                                 <dt class="text-white-50 mb-6"><li>Submission decisions</li></dt>
                             </div>
                             <div class="col-sm">
-                                <dd class="text-white-50 mb-6">February 25, 2022</dd>
+				    <dd class="text-white-50 mb-6"><del>February 25</del> March 4, 2022</dd>
                             </div>
                         </div>
                     </div>
