Fixed ? for proceedings editor

--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -772,7 +772,8 @@
       					<li>If you are missing the lipsum package needed to generate the Latin text, include the
         				<a class="alt" href="assets/submissions/lipsum.sty" target="_blank">lipsum style file</a> in the directory containing
         				your tex files.    </li>
-      					<li>If problems persist then you should email the proceedings editor <a class="alt" href="mailto:?" target="_blank">?</a>. </li>
+      					<li>If problems persist then you should email the proceedings editor <a class="alt" href="mailto:tcscrims@gmail.com" target="_blank">
+						Travis Scrimshaw</a>. </li>
     					</ul>
   				</li>
   							
