--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -646,7 +646,7 @@
 				contribution is indicated as an extended abstract of the full version. For questions and problems, email the proceedings 
 				editor <a href="mailto:tcscrims@gmail.com" target="_blank">Travis Scrimshaw</a>.</p>
 
-				<p class="text-white-50 mb-6">Before sending the final version or your submission, please read the instructions and requirements below.  
+				<p class="text-white-50 mb-6">Before sending the final version of your submission, please read the instructions and requirements below.  
 				The requirements for the original format of the submission apply (please read <strong>Guidelines for initial submissions</strong> 
 				and <strong>Formatting requirements and submission procedures</strong> below).  In particular, the default font type and 
 				font size (12 pt) must not be changed.  Final submissions, including suggested corrections, must not exceed 12 pages.</p>
