--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -296,7 +296,7 @@
                                 <dt class="text-white-50 mb-6"><li>Submission decisions</li></dt>
                             </div>
                             <div class="col-sm">
-				    <dd class="text-white-50 mb-6"><del>February 25</del> March 4, 2022</dd>
+				    <dd class="text-white-50 mb-6"><del>March 4, 2022</del></dd>
                             </div>
                         </div>
                     </div>
@@ -313,7 +313,7 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-sm">
-                                <dt class="text-white-50 mb-6"><li>Deadline for support requests</li></dt>
+                                <dt class="text-white-50 mb-6"><li>Deadline for NSF support requests</li></dt>
                             </div>
                             <div class="col-sm">
                                 <dd class="text-white-50 mb-6">March 25, 2022</dd>
