Added INSA and IMSc logos as sponsors

--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -982,7 +982,18 @@
                   		<img class="img-fluid" src="assets/img/NSFlogo1.png" alt="NSF logo">
                   		</a>
                		</div>                    
-         	</div>
+               		<div class="col-lg-4 col-sm-6">
+            			<a href="https://www.insaindia.res.in/">
+                  		<img class="img-fluid" src="assets/img/insa-logo.png" alt="INSA logo">
+                  		</a>
+               		</div>                    
+               		<div class="col-lg-4 col-sm-6">
+            			<a href="https://www.imsc.res.in/">
+                  		<img class="img-fluid" src="assets/img/imsc-logo.png" alt="INSA logo">
+                  		</a>
+               		</div>                    
+
+		</div>
          </div>
     </section>
    
