Added ICTS workshop

--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -49,7 +49,7 @@
                            <a class="dropdown-item js-scroll-trigger" href="#localinfovisa">Accommodation</a>
                            <a class="dropdown-item js-scroll-trigger" href="#localinfobanq">Visa Information</a>
                            <a class="dropdown-item js-scroll-trigger" href="#localinfotour">Social Events</a>
-                           <a class="dropdown-item js-scroll-trigger" href="#localinfoacco">Other Conferences</a>
+                           <a class="dropdown-item js-scroll-trigger" href="#localinfoacco">Satellite Workshops</a>
                            <a class="dropdown-item js-scroll-trigger" href="#localinfotourism">Tourism</a>
                         </div>
                     </li>
@@ -555,12 +555,12 @@
         </div>
     </div>
 
-    <!-- Other Conferences-->
+    <!-- Satellite Workshops-->
 
     <div id="localinfoacco" class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 text-center">
-                <h4 style="text-align: center;">Related Workshops & Conferences</h4>
+                <h4 style="text-align: center;">Satellite Workshops</h4>
                 <hr class="divider my-4"/>
             </div>
         </div>
@@ -597,15 +597,15 @@
 
     </div>
 
-<!--    <div class="container">
+    <div class="container">
             <div class="row">
                 <div class="col-sm">
-                    <h5 style="text-align: center;"><a href="https://amrita.edu/events/combinatorial-methods-in-graph-theory/">Combinatorial Methods in Graph Theory</a></h5>
-                        <p style="text-align: center;">Amrita University, Coimbatore, July 15-17</p>
+                    <h5 style="text-align: center;"><a href="https://www.icts.res.in/program/cagtr2022" target="_blank">Combinatorial Algebraic Geometry: Tropical and Real</a></h5>
+                        <p style="text-align: center;">International Centre for Theoretical Sciences, Bangalore, Juny 27 - July 8</p>
                 </div>
             </div>
     </div>
--->
+	     
     <!-- Tourism-->
 
     <div id="localinfotourism" class="container">
