--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -691,7 +691,7 @@
 				<p class="text-white-50 mb-6">The software itself shall be made publicly available for scrutinizing by the reviewers. If a specific platform is required, 
 				reviewers will make some efforts to get access to that platform and try the software.</p>
 
-				<h3 class="text-white-50 mb-6">Guidelines for final submissions</h3>
+				<h3 class="text-white-50 mb-6">Guidelines for final paper/poster submissions</h3>
 
 				<p class="text-white-50 mb-6">Accepted extended abstracts will be published in a proceedings volume of Séminaire Lotharingien Combinatoire. 
 				Authors will retain the right to publish a full version of their work in another journal, provided that the conference 
