--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -307,7 +307,7 @@
                                 <dt class="text-white-50 mb-6"><li>Deadline for software demonstration submissions</li></dt>
                             </div>
                             <div class="col-sm">
-                                <dd class="text-white-50 mb-6">March 18, 2022</dd>
+				    <dd class="text-white-50 mb-6"><del>March 18</del> April 1, 2022</dd>
                             </div>
                         </div>
                     </div>
