Corrected Armin's affiliation

--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -232,7 +232,7 @@
                             <p style="text-align: center;"><a href="https://www.lri.fr/~pons/en/">Viviane Pons</a></br>Université Paris-Saclay</p>
                             <p style="text-align: center;"><a href="https://www.imsc.res.in/~amri/">Amritanshu Prasad</a></br>The Institute of Mathematical Sciences, Chennai</p>
                             <p style="text-align: center;"><a href="https://www.mat.univie.ac.at/~schlosse/">Michael Schlosser</a></br>University of Vienna</p>
-                            <p style="text-align: center;"><a href="http://arminstraub.com/">Armin Straub</a></br>Hebrew University</p>
+                            <p style="text-align: center;"><a href="http://arminstraub.com/">Armin Straub</a></br>University of South Alabama</p>
                             <p style="text-align: center;"><a href="https://math.hawaii.edu/~vvtewari/">Vasu Tewari</a></br>University of Hawaii</p>
                             <p style="text-align: center;"><a href="http://math.univ-lyon1.fr/%7ezeng/">Jiang Zeng</a></br>Université Lyon 1</p>
                         </div>
