Fixed reg. details for non-Indians

--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -437,11 +437,11 @@
                     <p class="text-white-50 mb-4">The registration process is complicated, so please read carefully. </p>
                     
                     <ol class="text-white-50 mb-4" style="text-align: justify;">
-                    	<li>Fill out the registration form. If you are not an Indian citizen or 
+                    	<li>Fill out the registration form. If you are <span style="color:black;">attending in person</span> and not an Indian citizen or 
                     	<a href="https://boi.gov.in/content/person-indian-origin-pio" target="_blank">PIO</a>/<a 
                     	href="https://www.mea.gov.in/overseas-citizenship-of-india-scheme.htm" target="_blank">OCI</a> holder,
                     	you will have to enter your passport information, address as well as your father's name (strange, we know!).
-                    	This has to be done whether you are attending in person or online. 
+                    	(This information is not needed if you are attending online.) 
                     	This is mandated by Indian law for all international conferences and will be submitted to the 
                     	<a href="https://www.mea.gov.in/" target="_blank">Ministry of External Affairs</a>. This information will be stored 
                     	securely and shredded after the conference. Moreover, if you have registered before May 6,
