Added Basudeb symposium

--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -668,19 +668,19 @@
 
     
 
-<!--    <div class="container">
+    <div class="container">
             <div class="row">
                 <div class="col-sm">
-                    <h5 style="text-align: center;"><a href="https://amrita.edu/events/combinatorial-methods-in-graph-theory/">Combinatorial Methods in Graph Theory</a></h5>
-                    <p style="text-align: center;">Amrita University, Coimbatore, July 15-17</p>
+                    <h5 style="text-align: center;"><a href="https://www.icts.res.in/program/cagtr2022" target="_blank">Combinatorial Algebraic Geometry: Tropical and Real</a></h5>
+                        <p style="text-align: center;">International Centre for Theoretical Sciences, Bangalore, June 27 - July 8</p>
                 </div>
                 <div class="col-sm">
-                    <h5 style="text-align: center;"><a href="https://amrita.edu/events/combinatorial-methods-in-graph-theory/">Combinatorial Methods in Graph Theory 1</a></h5>
-                    <p style="text-align: center;">Amrita University 1, Coimbatore, July 15-17</p>
+                    <h5 style="text-align: center;"><a href="https://wiki.sagemath.org/days114" target="_blank">Sage Days 114</a></h5>
+                    <p style="text-align: center;">The Institute of Mathematical Sciences, Chennai, July 25–27</p>
                 </div>
             </div>
     </div>
--->
+
     <div class="container">
             <div class="row">
                 <div class="col-sm">
@@ -689,22 +689,23 @@
                 </div>
 
                 <div class="col-sm">
-                    <h5 style="text-align: center;"><a href="https://wiki.sagemath.org/days114" target="_blank">Sage Days 114</a></h5>
-                    <p style="text-align: center;">The Institute of Mathematical Sciences, Chennai, July 25–27</p>
+                    <h5 style="text-align: center;">One day symposium in honour of <a href="https://mathscinet.ams.org/mathscinet/search/author.html?mrauthid=240238" target="_blank">
+                    Basudeb Datta</a></h5>
+                    <p style="text-align: center;">Indian Institute of Science, Bangalore, July 28</p>
                 </div>
 
             </div>
+  </div>
 
-    </div>
-
-    <div class="container">
+<!--    <div class="container">
             <div class="row">
                 <div class="col-sm">
                     <h5 style="text-align: center;"><a href="https://www.icts.res.in/program/cagtr2022" target="_blank">Combinatorial Algebraic Geometry: Tropical and Real</a></h5>
-                        <p style="text-align: center;">International Centre for Theoretical Sciences, Bangalore, June 27 - July 8</p>
+                        <p style="text-align: center;">International Centre for Theoretical Sciences, Bangalore, Juny 27 - July 8</p>
                 </div>
             </div>
     </div>
+-->
 	     
     <!-- Tourism-->
 
