Added submission confirmation line

--- a/fpsac2022/form.html
+++ b/fpsac2022/form.html
@@ -157,7 +157,9 @@
 	</div>
 	</div>
 
-	<button type="submit" class="btn btn-primary mb-5 mt-3">Submit</button>
+	<hr>
+	<p><span class="bg-info"><b>You will be automatically taken to the payment portal when the form is successfully submitted.</b></span><p/>
+	<button type="submit" class="btn btn-primary mb-5">Submit</button>
       </form>
     </div>
 
