Corrected typos in hiking section

--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -806,10 +806,10 @@
 	       <!-- Hiking section -->
                <hr>  
 	       <p class="text mb-6">
-		The areas around Bangalore offer a plethora of hiking trails, that offer beautiful vistas. Atop these hills one comes face to face
+		The areas around Bangalore offer a plethora of hiking trails that offer beautiful vistas. Atop these hills one comes face to face
 		with lakes, verdant greens, cityscapes, temples, or the ruins of historic forts. For more information about hikes and treks around Bangalore visit
-		Karnataka state's eco tourism <a href="https://www.karnatakaecotourism.com/">w</a>. Since the conference is taking placebeing scheduled in the
-		monsoon season hiking is generally a dangerous activity, so be sure to check the weather if you plan to go on a hike.
+		Karnataka state's eco tourism <a href="https://www.karnatakaecotourism.com/">website</a>. Since the conference is taking place in the
+		monsoon season and hiking can be a dangerous activity, be sure to check the weather if you plan to go on a hike.
 	        
 	       <ul class="text mb-6">
  	        <li><strong>Nandigiri</strong> - Perhaps the quintessential Bangalore hiking experience, located about 60km along the airport road. Nandi Hills is a perfect respite from the hustle 
@@ -824,11 +824,11 @@
 		    get very slippery so be sure to wear approriate footwear. <a href="https://www.karnatakaecotourism.com/treksdetail/TRK130">More Info.</a></li><br />
 		       
 		<li><strong>Makalidurga</strong> - Durga in the vernacular means a fort. Located in the Doddaballapura region, Makalidurga was a hill fort first established by the
-		    Vijayanagara empire and changed several hands since. The rocky trail makes for a rewarding trekking experience and the view from the top is sprinkled with lakes,
-	            hillocks, and bracketed by train tracks, and asphalted roads. In the interest of preservation this trek supervised by Karnataka Eco-Tourism, and you need the Forest
+		    Vijayanagara empire and has changed hands several times since. The rocky trail makes for a rewarding trekking experience and the view from the top is sprinkled with lakes,
+	            hillocks, and bracketed by train tracks, and asphalted roads. In the interest of preservation this trek is supervised by Karnataka Eco-Tourism, and you need the Forest
 	            Department's permission. <a href="https://www.karnatakaecotourism.com/treksdetail/TRK132">More Info</a></li><br />
 		
-		<li><strong>Savandurga</strong> - Savinadurga, as it's colloquially called, is known as the fort of death due to steep inclines. It's clain to fame is that it is one
+		<li><strong>Savandurga</strong> - Savinadurga, as it's colloquially called, is known as the fort of death due to its steep inclines. Its claim to fame is that it is one
 		 among Asia's largest monolithic rocks. During the monsoon, the rocky path can pose a challenge to trekkers. The two temples at the top are frequented by devotees across
 		 the land making this a popular destination. <a href="https://www.karnatakatourism.org/tour-item/savanadurga/">More Info. </a></li><br />
 	        </ul>
