Added placeholder for father's name

--- a/fpsac2022/form.html
+++ b/fpsac2022/form.html
@@ -87,7 +87,7 @@
 	</div>
 	<div class="mb-3 mt-3">
 	  <label for="emerg-no" class="form-label">Emergency contact
-	  phone number (including country code):</label>
+	  phone number without spaces (including country code):</label>
 	  <input class="form-control" id="emerg-no" name="Emergency contact phone number">
 	</div>
 	</div>
@@ -120,7 +120,8 @@
 	<div id="non-indian-details" hidden>
 	<div class="mb-3 mt-3">
 	  <label for="father-name" class="form-label">Father's Name:</label>
-	  <input class="form-control" id="father-name" name="Father's Name">
+	  <input class="form-control" id="father-name" name="Father's Name"
+		 placeholder="This data is (unfortunately) required by the Ministry of External Affairs">
 	</div>
 	<div class="mb-3 mt-3">
 	  <label for="gender" class="form-label">Gender:</label>
