--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -462,7 +462,9 @@
                     	Depending on your bank, you might be charged an additional transaction fee.</li>
                     </ol>
 
-		    <p class="text-white-50 mb-4">To start the process, click on the <a href="form.html" target="_blank">registration form</a>.</p>        
+		  <p class="text-white-50 mb-4">To start the process, click on the <a href="form.html" target="_blank">registration form</a>.
+		  <br>
+		  <span style="color:black;">(Update on March 29: fixed bugs in the form.)</span></p>        
 						              
 		    <p class="text-white-50 mb-4" style="text-align: justify;">If you have already filled the registration form and 
 			would like to go directly to the payment portal, click 
