Modified submission line

--- a/fpsac2022/form.html
+++ b/fpsac2022/form.html
@@ -159,7 +159,8 @@
 	</div>
 
 	<hr>
-	<p><span class="bg-info"><b>You will be automatically taken to the payment portal when the form is successfully submitted.</b></span><p/>
+	<p><span class="bg-info"><b>For security reasons, you will not get a confirmation email.
+		You will be automatically taken to the payment portal when the form is successfully submitted.</b></span><p/>
 	<button type="submit" class="btn btn-primary mb-5">Submit</button>
       </form>
     </div>
