--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -307,7 +307,7 @@
                                 <dt class="text-white-50 mb-6"><li>Deadline for software demonstration submissions</li></dt>
                             </div>
                             <div class="col-sm">
-				    <dd class="text-white-50 mb-6"><del>March 18</del> April 1, 2022</dd>
+				    <dd class="text-white-50 mb-6"><del>April 1, 2022</del></dd>
                             </div>
                         </div>
                     </div>
@@ -317,7 +317,7 @@
                                 <dt class="text-white-50 mb-6"><li>Deadline for <a class="alt" href="#localinfosupport">NSF support requests</a></li></dt>
                             </div>
                             <div class="col-sm">
-                                <dd class="text-white-50 mb-6"><del>March 25</del> April 1, 2022</dd>
+                                <dd class="text-white-50 mb-6"><del>April 1, 2022</del></dd>
                             </div>
                         </div>
                     </div>
@@ -327,14 +327,14 @@
                                 <dt class="text-white-50 mb-6"><li>Deadline for final extended abstract submissions</li></dt>
                             </div>
                             <div class="col-sm">
-                                <dd class="text-white-50 mb-6">April 1, 2022</dd>
+                                <dd class="text-white-50 mb-6"><del>April 1, 2022</del></dd>
                             </div>
                         </div>
                     </div>
                     <div class="container">
                         <div class="row">
                             <div class="col-sm">
-                                <dt class="text-white-50 mb-6"><li>Financial support decisions</li></dt>
+                                <dt class="text-white-50 mb-6"><li>NSF financial support decisions</li></dt>
                             </div>
                             <div class="col-sm">
                                 <dd class="text-white-50 mb-6">April 15, 2022</dd>
