--- a/dattafest.html
+++ b/dattafest.html
@@ -8,7 +8,8 @@ title: "Symposium on Topology and Combinatorics"
 <h3>Thursday, 28 July, 2022</h3>
 </div>
 
-<p>A symposium on <em>Topology and Combinatorics</em> will be organized by the Department of Mathematics, Indian Institute of Science on Thursday, 28 July, 2022 on the occasion of the superannuation of Prof. Basudeb Datta.</p> 
+<p>A symposium on <em>Topology and Combinatorics</em> will be organized by the Department of Mathematics, Indian Institute of Science on Thursday, 28 July, 2022 on the occasion of the superannuation of Prof. Basudeb Datta. For more details, please visit 
+the website <a href="https://siddhartha-gadgil.github.io/DeptWeb/dattafest.html">http://math.iisc.ac.in/dattafest.html</a>.</p> 
 
 <p>
 This is one of a series of three symposia on the occasion of superannuation of three of our faculty members.</p>
