--- a/dattafest.html
+++ b/dattafest.html
@@ -1,20 +1,26 @@
 ---
 title: "Symposium on Topology and Combinatorics"
+layout: standalone
 ---
-
+<div class="row">
+    
+   </div>
 <div  class="text-center">
-<h2>Symposium on Topology and Combinatorics</h2>
-<h3>On the occasion of the superannuation of Prof. Basudeb Datta</h3>
-<h3>Thursday, 28 July, 2022</h3>
+<h1>Symposium on Topology and Combinatorics</h1>
+<h2>On the occasion of the superannuation of Prof. Basudeb Datta</h2>
+<h2>Thursday, 28 July, 2022</h2>
 </div>
-
-<p>A symposium on <em>Topology and Combinatorics</em> will be organized by the Department of Mathematics, Indian Institute of Science on Thursday, 28 July, 2022 on the occasion of the superannuation of Prof. Basudeb Datta. For more details, please visit 
+<p>&nbsp;</p>
+<div class="row">
+<div class="col-md-9">
+<p>A symposium on <em>Topology and Combinatorics</em> will be organized by the <a href="http://math.iisc.ac.in" target="_blank">Department of Mathematics</a>, <a href="http://www.iisc.ac.in" target="_blank">Indian Institute of Science on Thursday</a>, 28 July, 2022 on the occasion of the superannuation of <a href="http://math.iisc.ac.in/~dattab/" target="_blank">Prof. Basudeb Datta</a>.</p> 
+    
+<p>For more details, please visit 
 the website <a href="https://siddhartha-gadgil.github.io/DeptWeb/dattafest.html">http://math.iisc.ac.in/dattafest.html</a>.</p> 
 
 <p>
 This is one of a series of three symposia on the occasion of superannuation of three of our faculty members.</p>
-
-<h3>Invited Speakers</h3>
+<h2>Invited Speakers</h2>
 <ul>
     <li>Bhaskar Bagchi (ISI, Bangalore)</li>
     <li>Benjamin Burton (University of Queensland, Australia)</li>
@@ -22,3 +28,7 @@ This is one of a series of three symposia on the occasion of superannuation of t
     <li>Soumen Sarkar (IIT, Madras)</li>
     <li>Jonathan Spreer (University of Sydney, Australia)</li>
 </ul>
+</div>
+<div class="col-md-3"><img src="{{site.baseurl}}/images/fac-dattab.jpg" width="100%" /></div>
+</div>
+
