--- a/dattafest.html
+++ b/dattafest.html
@@ -1,5 +1,5 @@
 ---
-title: "Symposium on Topology and Combinatorics"
+title: "Dattafest: Topology and Combinatorics"
 layout: standalone
 ---
 <div class="row">
